app-canary.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-canary
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        version: v2
    spec:
      containers:
      - name: app
        image: ritwik3aug/ci-cd-example:latest
        ports:
        - containerPort: 5000
